2022-03-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: fixed bug #3343

2022-03-08 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/peeph.def:
	  Minor peephole optimizations.
	* src/mos6502/gen.c:
	  Special case 16b left and 8bit right in genPlus and genMinus.

2022-03-08 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sdas/as8xcxxx/ds8mch.c,
	  sdas/asxxsrc/asxxxx.h:
	  Fix ASxxxx warnings by merging with upstream for [bugs:#3347].

2022-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* .version:
	  Start post-4.2.0 development.

2022-03-08 Philipp Klaus Krause <pkk AT spth.de>

	* Merge sdcc-next branch to trunk.

2022-03-08 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peep.c:
	  Make it compile again.

2022-03-07 Gabriele Gorla <gorlik@yahoo.com>

	* support/regression/tests/bug3475630.c,
	  support/regression/tests/bug2094505.c:
	  Adjust tests parameters for stack-auto.
  	* src/mos6502/gen.c,
	  src/mos6502/main.c,
	  src/mos6502/ralloc2.cc:
  	  Use DPTR instead of YX for indexed addressing.

2022-03-07 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* src/z80/peep.c:
	  Accept more z80, sm83 and z80n mnemonics for size counting [bugs:#3330].

2022-03-07 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Clear temp register literal values after a label.
	* src/mos6502/gen.c,
	  src/mos6502/ralloc2.cc:
	  Add codegen for rotate.
	  
2022-03-07 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/z80.src/inst_gb80.cc:
	  Add `ld (c), a`.
	  support/regression/ports/ucgbz80/support.c,
	  support/regression/ports/ucgbz80/uCsim.cmd:
	  Reduce size of __put.

2022-03-07 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/z80.src/gb80.cc,
	  sim/ucsim/z80.src/inst_cb.cc,
	  sim/ucsim/z80.src/inst_gb80.cc:
	  Improve cycle counting.

2022-03-06 Sebastian 'basxto' Riedel <sdcc@basxto.de>

	* sim/ucsim/z80.src/gb80.cc,
	  sim/ucsim/z80.src/z80mac.h:
	  Fix bug #3340 (`pop af` and `and`).
